Fixes #1 - prevent sidebar info being truncated

--- a/src/main/webapp/less/maps.less
+++ b/src/main/webapp/less/maps.less
@@ -84,6 +84,12 @@ div.map {
     input[type="radio"] { margin: 0 3px 0 0; }
   }
 }
+// Copied from #content article.map above, modified slightly to accommodate a longer IPT stats sidebar (fixes issue #1)
+#content article.iptMap {
+  .content {
+    height: 450px;
+  }
+}
 // Copy of the above #content article.map, modified slightly to work with widened occurrence detail page
 // TODO: remove once css problems with new widened occurrence detail page are resolved
 #content article.occurrenceMap {
